<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.kapil.ecomm.addnote.AddEditNoteViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fab_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintVertical_bias="0.636" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="87dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintHorizontal_bias="0.0">

            <EditText
                android:id="@+id/note_desc_edit_text"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/note_description"
                android:text="@={viewmodel.description}"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="205dp" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="368dp"
            android:layout_height="0dp"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:id="@+id/note_sub_title_edit_text"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/note_sub_title"
                android:text="@={viewmodel.subTitle}"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="173dp" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="84dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0">

            <EditText
                android:id="@+id/note_title_edit_text"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/note_title"
                android:text="@={viewmodel.title}"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="173dp" />

        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>

</layout>