...
        <variable
            name="viewmodel"
            type="com.kapil.ecomm.notes.AllNotesViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_cord"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            />

        <include layout="@layout/content_all_notes"
            android:id="@+id/cont_all_notes"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_input_add" />

...
