<resources>
    <string name="app_name">NoteTakingApplication</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_edit_note">AddEditNoteActivity</string>
    <string name="note_title">Title</string>
    <string name="note_description">Description</string>
    <string name="save">Save</string>
    <string name="empty_note_message">Enter All the fields</string>
    <string name="no_notes_available">No Notes Available</string>
    <string name="title_activity_all_notes">AllNotesActivity</string>
    <string name="delete">Delete</string>
    <string name="all_notes">All Notes</string>
    <string name="add_note">Add a Note</string>
    <string name="all_orders">All Orders</string>
    <string name="title_activity_cancelled_order">Cancelled</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="title_activity_delivery">Delivery</string>
    <string name="order_out_for_delivery">Out For Delivery</string>
    <string name="title_activity_order_received">Order Received</string>
    <string name="order_received">Order Received</string>
    <string name="some_error_ocurred">Some Error Ocurred</string>
    <string name="note_sub_title">Sub Title</string>
    <string name="default_sub_title">You can now enter the sub title</string>
</resources>
